--- a/MyCore/MyCore.csproj
+++ b/MyCore/MyCore.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{52544577-E29B-4144-B8D6-6C858674EA20}</ProjectGuid>
+    <ProjectGuid>{65F21621-44BF-4E0A-B3E2-AD3CF215418A}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>OCCTool</RootNamespace>
-    <AssemblyName>OCCTool</AssemblyName>
+    <RootNamespace>MyCore</RootNamespace>
+    <AssemblyName>MyCore</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -45,8 +45,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="OCCTool.cs" />
+    <Compile Include="CAD\CircleCrossSectionParam.cs" />
+    <Compile Include="CAD\ICrossSectionParam.cs" />
+    <Compile Include="CAD\RectangleCrossSectionParam.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Tool\OCCTool.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
