新增 新增簡易管材 CAD 編輯程式 1. 可新增、編修圓形主管 2. 可新增、編修、刪除切平面 3. 可新增、編修、刪除圓形支管 4. 已新增的物件可透過 tree view 互動 4. 編修參數錯誤保護機制

--- a/MyTubeCutting/MyTubeCutting.csproj
+++ b/MyTubeCutting/MyTubeCutting.csproj
@@ -51,15 +51,20 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Form1.cs">
+    <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="MainForm.Designer.cs">
+      <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
     <Compile Include="OCCViewer.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TubeEditor\TubeCADEditor.cs" />
+    <Compile Include="ViewerMouseAction.cs" />
+    <EmbeddedResource Include="MainForm.resx">
+      <DependentUpon>MainForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -81,6 +86,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\MyCore\MyCore.csproj">
+      <Project>{65f21621-44bf-4e0a-b3e2-ad3cf215418a}</Project>
+      <Name>MyCore</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
