--- a/MyTubeCutting/MyTubeCutting.csproj
+++ b/MyTubeCutting/MyTubeCutting.csproj
@@ -57,11 +57,11 @@
     <Compile Include="MainForm.Designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="OCCViewer.cs" />
+    <Compile Include="OCCViewer\OCCViewer.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TubeEditor\TubeCADEditor.cs" />
-    <Compile Include="ViewerMouseAction.cs" />
+    <Compile Include="TubeCADEditor\TubeCADEditor.cs" />
+    <Compile Include="OCCViewer\ViewerMouseAction.cs" />
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
