修改 將 CAD 參數物件介面化，簡化 TubeCADEditor code

--- a/MyCore/MyCore.csproj
+++ b/MyCore/MyCore.csproj
@@ -55,6 +55,7 @@
     <Compile Include="CAD\TubeMaker\EndCutterParam.cs" />
     <Compile Include="CAD\TubeMaker\ITubeMakeParam.cs" />
     <Compile Include="CAD\TubeMaker\MainTubeParam.cs" />
+    <Compile Include="CAD\TubeMaker\TubeMakeParam_Type.cs" />
     <Compile Include="CAD\TubeMaker\TubeMaker.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tool\CloneHelper.cs" />
