--- a/MyCore/MyCore.csproj
+++ b/MyCore/MyCore.csproj
@@ -51,11 +51,11 @@
     <Compile Include="CAD\Geom2D\Geom2D_Type.cs" />
     <Compile Include="CAD\CrossSection\ICrossSection.cs" />
     <Compile Include="CAD\Geom2D\IGeom2D.cs" />
-    <Compile Include="CAD\TubeMaker\BranchTubeParam.cs" />
-    <Compile Include="CAD\TubeMaker\EndCutterParam.cs" />
-    <Compile Include="CAD\TubeMaker\ITubeMakeParam.cs" />
-    <Compile Include="CAD\TubeMaker\MainTubeParam.cs" />
-    <Compile Include="CAD\TubeMaker\TubeMakeParam_Type.cs" />
+    <Compile Include="CAD\TubeMaker\Param\CADft_BranchTubeParam.cs" />
+    <Compile Include="CAD\TubeMaker\Param\CADft_EndCutterParam.cs" />
+    <Compile Include="CAD\TubeMaker\Param\ICADFeatureParam.cs" />
+    <Compile Include="CAD\TubeMaker\Param\CADft_MainTubeParam.cs" />
+    <Compile Include="CAD\TubeMaker\Param\CADft_Type.cs" />
     <Compile Include="CAD\TubeMaker\TubeMaker.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tool\CloneHelper.cs" />
