1. TubeMaker 提供 MakeEndCutterFace API 2. TubeMaker 提供 MakeExtendBoundingBox API，用於計算主管 Extend BoundingBox
3. EndCutter preview 改為用 BoudingBox section 計算，以最佳化視覺大小
4. 更改 main tube size 時，會刷新 EndCutter preview

5. 新增 BoundingBox 類別，目前無用途

--- a/MyCore/MyCore.csproj
+++ b/MyCore/MyCore.csproj
@@ -45,6 +45,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CAD\BoundingBox\BoundingBox.cs" />
     <Compile Include="CAD\CrossSection\CrossSection.cs" />
     <Compile Include="CAD\Geom2D\Geom2D_Circle.cs" />
     <Compile Include="CAD\Geom2D\Geom2D_Rectangle.cs" />
