--- a/MyTubeCutting/MyTubeCutting.csproj
+++ b/MyTubeCutting/MyTubeCutting.csproj
@@ -60,6 +60,10 @@
     <Compile Include="OCCViewer\OCCViewer.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TubeCADEditor\Command\AddCadFeatureCommand.cs" />
+    <Compile Include="TubeCADEditor\Command\ICADEditCommand.cs" />
+    <Compile Include="TubeCADEditor\Command\ModifyCadFeatureCommand.cs" />
+    <Compile Include="TubeCADEditor\Command\RemoveCadFeatureCommand.cs" />
     <Compile Include="TubeCADEditor\TubeCADEditor.cs" />
     <Compile Include="OCCViewer\ViewerMouseAction.cs" />
     <EmbeddedResource Include="MainForm.resx">
