--- a/MyCore/MyCore.csproj
+++ b/MyCore/MyCore.csproj
@@ -45,6 +45,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CAD\ArrayParam\ArrayParam.cs" />
     <Compile Include="CAD\BoundingBox\BoundingBox.cs" />
     <Compile Include="CAD\CrossSection\CrossSection.cs" />
     <Compile Include="CAD\Geom2D\Geom2D_Circle.cs" />
@@ -52,12 +53,12 @@
     <Compile Include="CAD\Geom2D\Geom2D_Type.cs" />
     <Compile Include="CAD\CrossSection\ICrossSection.cs" />
     <Compile Include="CAD\Geom2D\IGeom2D.cs" />
-    <Compile Include="CAD\CADFeature\Param\CADft_BranchTubeParam.cs" />
-    <Compile Include="CAD\CADFeature\Param\CADft_EndCutterParam.cs" />
-    <Compile Include="CAD\CADFeature\Param\ICADFeatureParam.cs" />
-    <Compile Include="CAD\CADFeature\Param\CADft_MainTubeParam.cs" />
-    <Compile Include="CAD\CADFeature\Param\CADft_Type.cs" />
-    <Compile Include="CAD\CADFeature\CADFeatureMaker.cs" />
+    <Compile Include="CAD\CADFeatureParam\CADft_BranchTubeParam.cs" />
+    <Compile Include="CAD\CADFeatureParam\CADft_EndCutterParam.cs" />
+    <Compile Include="CAD\CADFeatureParam\ICADFeatureParam.cs" />
+    <Compile Include="CAD\CADFeatureParam\CADft_MainTubeParam.cs" />
+    <Compile Include="CAD\CADFeatureParam\CADft_Type.cs" />
+    <Compile Include="CAD\CADFeatureMaker\CADFeatureMaker.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tool\CloneHelper.cs" />
     <Compile Include="Tool\OCCTool.cs" />
