--- a/MyCore/MyCore.csproj
+++ b/MyCore/MyCore.csproj
@@ -47,6 +47,7 @@
   <ItemGroup>
     <Compile Include="CAD\ArrayParam\ArrayParam.cs" />
     <Compile Include="CAD\BoundingBox\BoundingBox.cs" />
+    <Compile Include="CAD\CADFeatureParam\CADFeatureParamMap.cs" />
     <Compile Include="CAD\CrossSection\CrossSection.cs" />
     <Compile Include="CAD\Geom2D\Geom2D_Circle.cs" />
     <Compile Include="CAD\Geom2D\Geom2D_Rectangle.cs" />
