--- a/MyCore/MyCore.csproj
+++ b/MyCore/MyCore.csproj
@@ -49,10 +49,13 @@
     <Compile Include="CAD\BoundingBox\BoundingBox.cs" />
     <Compile Include="CAD\CADFeatureParam\CADFeatureParamMap.cs" />
     <Compile Include="CAD\CrossSection\CrossSection.cs" />
+    <Compile Include="CAD\CrossSection\CS_CircleCheck.cs" />
+    <Compile Include="CAD\CrossSection\CS_DefaultCheck.cs" />
+    <Compile Include="CAD\CrossSection\CS_RectangleCheck.cs" />
+    <Compile Include="CAD\CrossSection\ICrossSectionCheck.cs" />
     <Compile Include="CAD\Geom2D\Geom2D_Circle.cs" />
     <Compile Include="CAD\Geom2D\Geom2D_Rectangle.cs" />
     <Compile Include="CAD\Geom2D\Geom2D_Type.cs" />
-    <Compile Include="CAD\CrossSection\ICrossSection.cs" />
     <Compile Include="CAD\Geom2D\IGeom2D.cs" />
     <Compile Include="CAD\CADFeatureParam\CADft_BranchTubeParam.cs" />
     <Compile Include="CAD\CADFeatureParam\CADft_EndCutterParam.cs" />
