--- a/MyTubeCutting/MyTubeCutting.csproj
+++ b/MyTubeCutting/MyTubeCutting.csproj
@@ -57,6 +57,12 @@
     <Compile Include="MainForm.Designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="MainTubeShapeForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MainTubeShapeForm.Designer.cs">
+      <DependentUpon>MainTubeShapeForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="OCCViewer\OCCViewer.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -71,6 +77,9 @@
     <Compile Include="OCCViewer\ViewerMouseAction.cs" />
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MainTubeShapeForm.resx">
+      <DependentUpon>MainTubeShapeForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
