--- a/MyTubeCutting/MyTubeCutting.csproj
+++ b/MyTubeCutting/MyTubeCutting.csproj
@@ -57,11 +57,11 @@
     <Compile Include="MainForm.Designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="MainTubeShapeForm.cs">
+    <Compile Include="MainTubeTypeForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="MainTubeShapeForm.Designer.cs">
-      <DependentUpon>MainTubeShapeForm.cs</DependentUpon>
+    <Compile Include="MainTubeTypeForm.Designer.cs">
+      <DependentUpon>MainTubeTypeForm.cs</DependentUpon>
     </Compile>
     <Compile Include="OCCViewer\OCCViewer.cs" />
     <Compile Include="Program.cs" />
@@ -75,11 +75,12 @@
     <Compile Include="TubeCADEditor\Command\RemoveMainTubeCommand.cs" />
     <Compile Include="TubeCADEditor\TubeCADEditor.cs" />
     <Compile Include="OCCViewer\ViewerMouseAction.cs" />
+    <Compile Include="TypeDefine\TypeDefine.cs" />
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="MainTubeShapeForm.resx">
-      <DependentUpon>MainTubeShapeForm.cs</DependentUpon>
+    <EmbeddedResource Include="MainTubeTypeForm.resx">
+      <DependentUpon>MainTubeTypeForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
