--- a/MyTubeCutting/MyTubeCutting.csproj
+++ b/MyTubeCutting/MyTubeCutting.csproj
@@ -51,6 +51,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BranchTubeTypeForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="BranchTubeTypeForm.Designer.cs">
+      <DependentUpon>BranchTubeTypeForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -76,6 +82,9 @@
     <Compile Include="TubeCADEditor\TubeCADEditor.cs" />
     <Compile Include="OCCViewer\ViewerMouseAction.cs" />
     <Compile Include="TypeDefine\TypeDefine.cs" />
+    <EmbeddedResource Include="BranchTubeTypeForm.resx">
+      <DependentUpon>BranchTubeTypeForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
