--- a/MyCore/MyCore.csproj
+++ b/MyCore/MyCore.csproj
@@ -65,7 +65,7 @@
     <Compile Include="CAD\CADFeatureMaker\CADFeatureMaker.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tool\CloneHelper.cs" />
-    <Compile Include="Tool\OCCTool.cs" />
+    <Compile Include="CAD\OCCTool\OCCTool.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
