1. 新增V槽參數基底物件 2. 新增 TODO 註解

--- a/MyCore/MyCore.csproj
+++ b/MyCore/MyCore.csproj
@@ -46,8 +46,14 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CAD\ArrayParam\ArrayParam.cs" />
+    <Compile Include="CAD\BendingNotch\BendingNotchShape_Type.cs" />
+    <Compile Include="CAD\BendingNotch\BN_BothSideFillet.cs" />
+    <Compile Include="CAD\BendingNotch\BN_OneSideFillet.cs" />
+    <Compile Include="CAD\BendingNotch\BN_VShape.cs" />
+    <Compile Include="CAD\BendingNotch\IBendingNotchShape.cs" />
     <Compile Include="CAD\BoundingBox\BoundingBox.cs" />
     <Compile Include="CAD\CADFeatureParam\CADFeatureParamMap.cs" />
+    <Compile Include="CAD\CADFeatureParam\CADft_BendingNotchParam.cs" />
     <Compile Include="CAD\CrossSection\CrossSection.cs" />
     <Compile Include="CAD\CrossSection\CS_CircleCheck.cs" />
     <Compile Include="CAD\CrossSection\CS_DefaultCheck.cs" />
