1. 新增 BendingNotchTypeForm 2. 實作新增V槽入口點 3. 對齊一些 coding 習慣

--- a/MyCore/MyCore.csproj
+++ b/MyCore/MyCore.csproj
@@ -46,7 +46,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CAD\ArrayParam\ArrayParam.cs" />
-    <Compile Include="CAD\BendingNotch\BendingNotchShape_Type.cs" />
+    <Compile Include="CAD\BendingNotch\BendingNotch_Type.cs" />
     <Compile Include="CAD\BendingNotch\BN_BothSideFillet.cs" />
     <Compile Include="CAD\BendingNotch\BN_OneSideFillet.cs" />
     <Compile Include="CAD\BendingNotch\BN_VShape.cs" />
