--- a/MyTubeCutting/MyTubeCutting.csproj
+++ b/MyTubeCutting/MyTubeCutting.csproj
@@ -80,6 +80,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TubeCADEditor\Command\AddCadFeatureCommand.cs" />
     <Compile Include="TubeCADEditor\Command\AddMainTubeCommand.cs" />
+    <Compile Include="TubeCADEditor\Command\CommandErrorCode.cs" />
     <Compile Include="TubeCADEditor\Command\ICADEditCommand.cs" />
     <Compile Include="TubeCADEditor\Command\ModifyCadFeatureCommand.cs" />
     <Compile Include="TubeCADEditor\Command\ModifyMainTubeCommand.cs" />
