--- a/MyTubeCutting/MyCADUI.csproj
+++ b/MyTubeCutting/MyCADUI.csproj
@@ -6,8 +6,8 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{BFF7C63C-3306-49FC-A435-9F8AC0DE001E}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>MyTubeCutting</RootNamespace>
-    <AssemblyName>MyTubeCutting</AssemblyName>
+    <RootNamespace>MyCADUI</RootNamespace>
+    <AssemblyName>MyCADUI</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -63,11 +63,11 @@
     <Compile Include="Dialog\BranchTubeTypeForm.Designer.cs">
       <DependentUpon>BranchTubeTypeForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="MainForm.cs">
+    <Compile Include="CADEditMainForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="MainForm.Designer.cs">
-      <DependentUpon>MainForm.cs</DependentUpon>
+    <Compile Include="CADEditMainForm.Designer.cs">
+      <DependentUpon>CADEditMainForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Dialog\MainTubeTypeForm.cs">
       <SubType>Form</SubType>
@@ -95,8 +95,8 @@
     <EmbeddedResource Include="Dialog\BranchTubeTypeForm.resx">
       <DependentUpon>BranchTubeTypeForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="MainForm.resx">
-      <DependentUpon>MainForm.cs</DependentUpon>
+    <EmbeddedResource Include="CADEditMainForm.resx">
+      <DependentUpon>CADEditMainForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Dialog\MainTubeTypeForm.resx">
       <DependentUpon>MainTubeTypeForm.cs</DependentUpon>
@@ -109,6 +109,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
