修改專案與 namespace 名稱

--- a/MyCADUI/MyCADUI.csproj
+++ b/MyCADUI/MyCADUI.csproj
@@ -125,9 +125,9 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\MyCore\MyCore.csproj">
+    <ProjectReference Include="..\MyCore\MyCADCore.csproj">
       <Project>{65f21621-44bf-4e0a-b3e2-ad3cf215418a}</Project>
-      <Name>MyCore</Name>
+      <Name>MyCADCore</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup />
