--- a/Utility/Utility.csproj
+++ b/Utility/Utility.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{65F21621-44BF-4E0A-B3E2-AD3CF215418A}</ProjectGuid>
+    <ProjectGuid>{E3E8855E-F88F-42B6-9F5F-BB02D8221353}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>MyCADCore</RootNamespace>
-    <AssemblyName>MyCADCore</AssemblyName>
+    <RootNamespace>Utility</RootNamespace>
+    <AssemblyName>Utility</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -36,7 +36,6 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Drawing" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -45,38 +44,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CAD\ArrayParam\ArrayParam.cs" />
-    <Compile Include="CAD\BendingNotch\BendingNotch_Type.cs" />
-    <Compile Include="CAD\BendingNotch\BN_BothSideFillet.cs" />
-    <Compile Include="CAD\BendingNotch\BN_OneSideFillet.cs" />
-    <Compile Include="CAD\BendingNotch\BN_VShape.cs" />
-    <Compile Include="CAD\BendingNotch\IBendingNotchShape.cs" />
-    <Compile Include="CAD\BoundingBox\BoundingBox.cs" />
-    <Compile Include="CAD\CADFeatureParam\CADFeatureParamMap.cs" />
-    <Compile Include="CAD\CADFeatureParam\CADft_BendingNotchParam.cs" />
-    <Compile Include="CAD\CrossSection\CrossSection.cs" />
-    <Compile Include="CAD\CrossSection\CS_CircleCheck.cs" />
-    <Compile Include="CAD\CrossSection\CS_DefaultCheck.cs" />
-    <Compile Include="CAD\CrossSection\CS_RectangleCheck.cs" />
-    <Compile Include="CAD\CrossSection\ICrossSectionCheck.cs" />
-    <Compile Include="CAD\Geom2D\Geom2D_Circle.cs" />
-    <Compile Include="CAD\Geom2D\Geom2D_Rectangle.cs" />
-    <Compile Include="CAD\Geom2D\Geom2D_Type.cs" />
-    <Compile Include="CAD\Geom2D\IGeom2D.cs" />
-    <Compile Include="CAD\CADFeatureParam\CADft_BranchTubeParam.cs" />
-    <Compile Include="CAD\CADFeatureParam\CADft_EndCutterParam.cs" />
-    <Compile Include="CAD\CADFeatureParam\ICADFeatureParam.cs" />
-    <Compile Include="CAD\CADFeatureParam\CADft_MainTubeParam.cs" />
-    <Compile Include="CAD\CADFeatureParam\CADft_Type.cs" />
-    <Compile Include="CAD\CADFeatureMaker\CADFeatureMaker.cs" />
+    <Compile Include="General\CloneHelper.cs" />
+    <Compile Include="OCC\ExportHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="OCCTool\OCCTool.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Utility\Utility.csproj">
-      <Project>{e3e8855e-f88f-42b6-9f5f-bb02d8221353}</Project>
-      <Name>Utility</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
