--- a/MyCADCore/MyCADCore.csproj
+++ b/MyCADCore/MyCADCore.csproj
@@ -45,30 +45,30 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CAD\ArrayParam\ArrayParam.cs" />
-    <Compile Include="CAD\BendingNotch\BendingNotch_Type.cs" />
-    <Compile Include="CAD\BendingNotch\BN_BothSideFillet.cs" />
-    <Compile Include="CAD\BendingNotch\BN_OneSideFillet.cs" />
-    <Compile Include="CAD\BendingNotch\BN_VShape.cs" />
-    <Compile Include="CAD\BendingNotch\IBendingNotchShape.cs" />
-    <Compile Include="CAD\BoundingBox\BoundingBox.cs" />
-    <Compile Include="CAD\CADFeatureParam\CADFeatureParamMap.cs" />
-    <Compile Include="CAD\CADFeatureParam\CADft_BendingNotchParam.cs" />
-    <Compile Include="CAD\CrossSection\CrossSection.cs" />
-    <Compile Include="CAD\CrossSection\CS_CircleCheck.cs" />
-    <Compile Include="CAD\CrossSection\CS_DefaultCheck.cs" />
-    <Compile Include="CAD\CrossSection\CS_RectangleCheck.cs" />
-    <Compile Include="CAD\CrossSection\ICrossSectionCheck.cs" />
-    <Compile Include="CAD\Geom2D\Geom2D_Circle.cs" />
-    <Compile Include="CAD\Geom2D\Geom2D_Rectangle.cs" />
-    <Compile Include="CAD\Geom2D\Geom2D_Type.cs" />
-    <Compile Include="CAD\Geom2D\IGeom2D.cs" />
-    <Compile Include="CAD\CADFeatureParam\CADft_BranchTubeParam.cs" />
-    <Compile Include="CAD\CADFeatureParam\CADft_EndCutterParam.cs" />
-    <Compile Include="CAD\CADFeatureParam\ICADFeatureParam.cs" />
-    <Compile Include="CAD\CADFeatureParam\CADft_MainTubeParam.cs" />
-    <Compile Include="CAD\CADFeatureParam\CADft_Type.cs" />
-    <Compile Include="CAD\CADFeatureMaker\CADFeatureMaker.cs" />
+    <Compile Include="CADParam\ArrayParam\ArrayParam.cs" />
+    <Compile Include="CADParam\BendingNotch\BendingNotch_Type.cs" />
+    <Compile Include="CADParam\BendingNotch\BN_BothSideFillet.cs" />
+    <Compile Include="CADParam\BendingNotch\BN_OneSideFillet.cs" />
+    <Compile Include="CADParam\BendingNotch\BN_VShape.cs" />
+    <Compile Include="CADParam\BendingNotch\IBendingNotchShape.cs" />
+    <Compile Include="CADParam\BoundingBox\BoundingBox.cs" />
+    <Compile Include="CADParam\CADFeatureParam\CADFeatureParamMap.cs" />
+    <Compile Include="CADParam\CADFeatureParam\CADft_BendingNotchParam.cs" />
+    <Compile Include="CADParam\CrossSection\CrossSection.cs" />
+    <Compile Include="CADParam\CrossSection\CS_CircleCheck.cs" />
+    <Compile Include="CADParam\CrossSection\CS_DefaultCheck.cs" />
+    <Compile Include="CADParam\CrossSection\CS_RectangleCheck.cs" />
+    <Compile Include="CADParam\CrossSection\ICrossSectionCheck.cs" />
+    <Compile Include="CADParam\Geom2D\Geom2D_Circle.cs" />
+    <Compile Include="CADParam\Geom2D\Geom2D_Rectangle.cs" />
+    <Compile Include="CADParam\Geom2D\Geom2D_Type.cs" />
+    <Compile Include="CADParam\Geom2D\IGeom2D.cs" />
+    <Compile Include="CADParam\CADFeatureParam\CADft_BranchTubeParam.cs" />
+    <Compile Include="CADParam\CADFeatureParam\CADft_EndCutterParam.cs" />
+    <Compile Include="CADParam\CADFeatureParam\ICADFeatureParam.cs" />
+    <Compile Include="CADParam\CADFeatureParam\CADft_MainTubeParam.cs" />
+    <Compile Include="CADParam\CADFeatureParam\CADft_Type.cs" />
+    <Compile Include="CADMaker\CADFeatureMaker.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="OCCTool\OCCTool.cs" />
   </ItemGroup>
