--- a/MyCADCore/MyCADCore.csproj
+++ b/MyCADCore/MyCADCore.csproj
@@ -79,9 +79,9 @@
     <Compile Include="OCCTool\OCCTool.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\MyLanguageManager\MyLanguageManager.csproj">
-      <Project>{04fcc0ce-27d3-4262-b609-d776490124ee}</Project>
-      <Name>MyLanguageManager</Name>
+    <ProjectReference Include="..\MyUIDisplayModel\MyUIDisplayModel.csproj">
+      <Project>{50c11367-5719-4246-a006-6998837ab54e}</Project>
+      <Name>MyUIDisplayModel</Name>
     </ProjectReference>
     <ProjectReference Include="..\Utility\Utility.csproj">
       <Project>{e3e8855e-f88f-42b6-9f5f-bb02d8221353}</Project>
