1. 將 make prism 的共通邏輯抽出
2. 新增尖角V槽兩種 relief hole
a. 基底參數新增
b. maker 邏輯擴充

3. 將 make compound 邏輯抽出，但目前仍然只有 array 用到

4. 參數編輯後 refresh propertygrid，目的是確保動態顯示的參數被更新

--- a/MyCADCore/MyCADCore.csproj
+++ b/MyCADCore/MyCADCore.csproj
@@ -51,6 +51,7 @@
     <Compile Include="CADParam\BendingNotch\BN_OneSide.cs" />
     <Compile Include="CADParam\BendingNotch\BN_VShape.cs" />
     <Compile Include="CADParam\BendingNotch\IBendingNotchShape.cs" />
+    <Compile Include="CADParam\BendingNotch\ReliefHole.cs" />
     <Compile Include="CADParam\BoundingBox\BoundingBox.cs" />
     <Compile Include="CADParam\CADFeatureParam\CADFeatureParamMap.cs" />
     <Compile Include="CADParam\CADFeatureParam\CADft_BendingNotchParam.cs" />
