--- a/MyUIDisplayModel/MyUIDisplayModel.csproj
+++ b/MyUIDisplayModel/MyUIDisplayModel.csproj
@@ -33,6 +33,8 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -44,6 +46,7 @@
     <Compile Include="MyDisplayNameAttribute.cs" />
     <Compile Include="MyObjectConverter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Relayout.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\MyLanguageManager\MyLanguageManager.csproj">
