--- a/MyCADUI/MyCADUI.csproj
+++ b/MyCADUI/MyCADUI.csproj
@@ -60,7 +60,6 @@
     <Compile Include="CADEditMainForm.Designer.cs">
       <DependentUpon>CADEditMainForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="OCCViewer\OCCViewer.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TubeCADEditor\CADEditErrorCode.cs" />
@@ -72,7 +71,6 @@
     <Compile Include="TubeCADEditor\Command\RemoveCadFeatureCommand.cs" />
     <Compile Include="TubeCADEditor\Command\RemoveMainTubeCommand.cs" />
     <Compile Include="TubeCADEditor\TubeCADEditor.cs" />
-    <Compile Include="OCCViewer\ViewerMouseAction.cs" />
     <Compile Include="TypeDefine\TypeDefine.cs" />
     <EmbeddedResource Include="CADEditMainForm.resx">
       <DependentUpon>CADEditMainForm.cs</DependentUpon>
@@ -108,6 +106,10 @@
     <ProjectReference Include="..\MyLanguageManager\MyLanguageManager.csproj">
       <Project>{04fcc0ce-27d3-4262-b609-d776490124ee}</Project>
       <Name>MyLanguageManager</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\MyOCCViwer\MyOCCViwer.csproj">
+      <Project>{d53b3d86-2889-47c5-a868-eea858805227}</Project>
+      <Name>MyOCCViwer</Name>
     </ProjectReference>
     <ProjectReference Include="..\MyUIDisplayModel\MyUIDisplayModel.csproj">
       <Project>{50c11367-5719-4246-a006-6998837ab54e}</Project>
