1. 將 OCCTool 改名為 GeomMaker，專門處理 making geometry 2. 將 MakeArray 搬進 CADFeatureMaker，因目前無通用性 3. 將 OCC 通用功能抽出，轉移至 MyUtility 下的 OCCHelper 4. MyUtility namespace 拆分，拆成 OCC 與 General

--- a/MyUtility/MyUtility.csproj
+++ b/MyUtility/MyUtility.csproj
@@ -45,7 +45,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="General\CloneHelper.cs" />
+    <Compile Include="OCC\BoundingBox.cs" />
     <Compile Include="OCC\ExportHelper.cs" />
+    <Compile Include="OCC\OCCHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
