--- a/MyCADCore/MyCADCore.csproj
+++ b/MyCADCore/MyCADCore.csproj
@@ -52,7 +52,6 @@
     <Compile Include="CADParam\BendingNotch\BN_VShape.cs" />
     <Compile Include="CADParam\BendingNotch\IBendingNotchShape.cs" />
     <Compile Include="CADParam\BendingNotch\ReliefHole.cs" />
-    <Compile Include="CADParam\BoundingBox\BoundingBox.cs" />
     <Compile Include="CADParam\CADFeatureParam\CADFeatureParamMap.cs" />
     <Compile Include="CADParam\CADFeatureParam\CADft_BendingNotchParam.cs" />
     <Compile Include="CADParam\CrossSection\CrossSection.cs" />
@@ -77,7 +76,7 @@
     <Compile Include="CADParam\CADFeatureParam\CADft_Type.cs" />
     <Compile Include="CADMaker\CADFeatureMaker.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="OCCTool\OCCTool.cs" />
+    <Compile Include="OCCTool\GeomMaker.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\MyUIDisplayModel\MyUIDisplayModel.csproj">
