--- a/MyCADCore/MyCADCore.csproj
+++ b/MyCADCore/MyCADCore.csproj
@@ -76,7 +76,7 @@
     <Compile Include="CADParam\CADFeatureParam\CADft_Type.cs" />
     <Compile Include="CADMaker\CADFeatureMaker.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="OCCTool\GeomMaker.cs" />
+    <Compile Include="CADMaker\GeomMaker.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\MyUIDisplayModel\MyUIDisplayModel.csproj">
